docs: Update 04-add-slack-actions.md